[package]
name = "vertx-rust"
version = "0.4.1"
authors = ["Daniel Lewiński <nerull@craftsoft.eu>"]
edition = "2021"
description = "Simple Rust version of vertx tcp eventbus, tcp server and http server"
license-file = "LICENSE"
homepage = "https://github.com/kathog/vertx-rust"
repository = "https://github.com/kathog/vertx-rust"
readme = "README.md"
documentation = "https://docs.rs/vertx-rust"

[features]
default = ["client"]

zk = ["zookeeper"]
tc = ["tcmalloc"]
client = ["hyper-tls"]


[dependencies]
zookeeper = { version = "0.6", optional = true }
tcmalloc = { version = "0.3", optional = true }
hyper-tls = {version = "0.5", optional = true}
mimalloc = { version = "0.1", default-features = false }
serde = "1.0"
bincode = "1.3"
futures = "0.3"
uuid = { version = "1.2", features = ["v4"] }
num_cpus = "1.13"
hashbrown = "0.13"
lazy_static = "1.4"
hypospray = "0.1"
tokio = {version ="1", features = ["full"] }
bytes = "1"
multimap = "0.8"
jvm-serializable = {version = "0.0.3"}
jvm-macro = {version = "0.0.1"}
log = {version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
crossbeam-channel = "0.5"
hyper = {version = "0.14", features = ["full"] }
signal-hook = "0.3"
parking_lot = { version = "*", features = ["nightly"] }

[dev-dependencies]
pretty_env_logger = "0.4"
criterion = { version = "0.4", features = ["async"]}
criterion-cycles-per-byte = "0.1"
iai = "0.1"
console-subscriber = "0.1"

[[bench]]
#path = "benches/iai_benchmarks.rs"
path = "benches/benchmarks.rs"
#paths = ["benches/benchmarks.rs", "benches/iai_benchmarks.rs"]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
debug = false
#rpath = false
#debug-assertions = false
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
#rpath = false
#debug-assertions = false
lto = "fat"
codegen-units = 1
