[package]
name = "zk_cluster"
version = "0.1.0"
authors = ["Daniel <nerull@craftsoft.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vertx-rust = {git = "https://github.com/kathog/vertx-rust", features = ["zk"], branch = "main"}
log = {version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
simple_logger = "1.11.0"
crossbeam-channel = "0.5.0"