[package]
name = "zk_cluster"
version = "0.1.0"
authors = ["Daniel <nerull@craftsoft.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vertx-rust = {path = "../src", features = ["zk", "client"], branch = "main"}
log = {version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
pretty_env_logger = "0.4"
crossbeam-channel = "0.5.0"